--- a/views/library_show.erb
+++ b/views/library_show.erb
@@ -4,5 +4,5 @@
 <p>Address		: <%= @library.address %> </p>
 <p>Phone 			: <%= @library.phone_number %> </p>
 
-
+<a href="/library/<%= @library.id %>/edit">Edit Branch Name</a></br>
 <a href="/library">Return to Library Main</a>
