--- a/views/library_index.erb
+++ b/views/library_index.erb
@@ -1,7 +1,11 @@
+
+
 <h1>Library Locations</h1>
 
 <ol>
-	<% @library.each do |name| %>
+	<% @libraries.each do |name| %>
 		<li><a href="/library/<%= name.id %>"><%= name.branch_name %></a> : <%= name.address %></li>
 	<%end%>
 </ol>
+
+<a href="/library/new">Create a new library</a>
