--- a/views/library_new.erb
+++ b/views/library_new.erb
@@ -1,8 +1,16 @@
+<% if @library && @library.errors.any? %>
+	<% @library.errors.full_messages.each do |m| %>
+		<p>Error: <%= m %></p>
+	<% end %>
+<% end %>
+
 <h1>New Library</h1>
 
-<form action="/library" method "post" >
+<form action="/library" method= "post" >
 	Branch Name: 	<input type="text" name = "branch_name"></br>
 	Phone Number: <input type="text" name = "phone_number"></br>
 	Address: 			<input type="text" name = "address"> </br>
 	<input type="submit" value="Submit New Library">
 </form>
+<br>
+<a href="/library">Return to Library Main</a>
