--- a/views/library_edit.erb
+++ b/views/library_edit.erb
@@ -1,10 +1,10 @@
-<h1> Edit: <%= @library.branch_name %></h1>
+<h1> Edit <%= @library.branch_name %></h1>
 
 <form action="/library/<%= @library.id %>" method= "post" >
-	Branch Name: 	<input type="text" name = "branch_name" 	value = "<%= @library.branch_name%>" > </br>
-	Phone Number: <input type="text" name = "phone_number" 	value = "<%=@library.phone_number%>" > </br>
-	Address: 			<input type="text" name = "address" 			value = "<%= @library.address%>" > </br>
-	<input type="submit" value="Submit Edit to <%= @library.branch_name %>">
+	Branch Name: 	<input type="text" 		name = "branch_name" 	value = "<%= @library.branch_name%>" > </br>
+	Phone Number: <input type="text" 		name = "phone_number" value = "<%=@library.phone_number%>" > </br>
+	Address: 			<input type="text" 		name = "address" 			value = "<%= @library.address%>" > </br>
+								<input type="submit" 	value="Submit Edit to <%= @library.branch_name %>">
 </form>
 <br>
 <a href="/library">Return to Library Main</a>
