--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	
 	<title>Nebraska Network Library</title>
 </head>
 <body>
