--- a/views/staff_members_new.erb
+++ b/views/staff_members_new.erb
@@ -1,12 +1,9 @@
 <h1>New Staff Members</h1>
-
 <form action="/staff_members"	method ="post">
-	Employee Name: 	<input type = "text"		name =  "staff_member">
+	Employee Name: 	<input type = "text"		name =  "name">
 	Employee Email:	<input type = "text" 		name =  "email">
-									<input type = "submit"	value = "Add New Staff Memeber">
+									<input type=  "submit"	value="Add New Staff Memeber">
 </form>
 
+</br>
 <a href="/staff_members">Return to Staff Menu</a>
-
-
-
